--- a/app/src/main/res/layout/fragment_listado_pacientes.xml
+++ b/app/src/main/res/layout/fragment_listado_pacientes.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/FondoTerciario"
+    android:background="@color/FondoSecundario"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Rutas.Catalogos.Pacientes.ListadoPacientes">
 
