--- a/app/src/main/res/layout/item_ficha.xml
+++ b/app/src/main/res/layout/item_ficha.xml
@@ -125,7 +125,7 @@
                     android:weightSum="3">
 
                     <TextView
-                        android:id="@+id/fechaNacimiento"
+                        android:id="@+id/fechaNacimientoPaciente"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -137,7 +137,7 @@
                         android:textSize="15sp" />
 
                     <TextView
-                        android:id="@+id/estadoServicio"
+                        android:id="@+id/edadPaciente"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1.1"
@@ -149,6 +149,7 @@
                         android:textSize="14sp" />
 
                     <TextView
+                        android:id="@+id/estadoPaciente"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="0.9"
@@ -169,6 +170,7 @@
                     android:weightSum="3">
 
                     <TextView
+                        android:id="@+id/debePaciente"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -180,6 +182,7 @@
                         android:textSize="15sp" />
 
                     <TextView
+                        android:id="@+id/haberPaciente"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -191,6 +194,7 @@
                         android:textSize="15sp" />
 
                     <TextView
+                        android:id="@+id/saldoPaciente"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -201,8 +205,6 @@
                         android:textColor="@color/Blanco"
                         android:textSize="15sp" />
                 </LinearLayout>
-
-
             </LinearLayout>
 
             <ImageButton
@@ -214,7 +216,6 @@
                 android:src="@drawable/ic_opciones"
                 android:text="Limpiar"
                 android:textColor="@color/Blanco" />
-
         </LinearLayout>
 
         <View
