--- a/app/src/main/res/layout/fragment_listado_pacientes.xml
+++ b/app/src/main/res/layout/fragment_listado_pacientes.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/FondoSecundario"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Rutas.Catalogos.Pacientes.ListadoPacientes">
 
     <include
@@ -16,33 +16,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="65dp"
         android:clickable="true"
         android:elevation="10dp"
-        android:src="@drawable/icono_buscar"
-        app:backgroundTint="@color/AzulOscuro"
         android:focusable="true"
-        android:layout_marginEnd="10dp" />
+        android:src="@drawable/icono_buscar"
+        app:backgroundTint="@color/AzulOscuro" />
 
-    <ScrollView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/lista_pacientes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="65dp">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/lista_pacientes"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </LinearLayout>
-    </ScrollView>
+        android:layout_marginTop="65dp" />
 
 </FrameLayout>
