--- a/app/src/main/res/layout/fragment_listado_pacientes.xml
+++ b/app/src/main/res/layout/fragment_listado_pacientes.xml
@@ -11,19 +11,19 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/consultador"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="65dp"
-        android:clickable="true"
-        android:elevation="10dp"
-        android:focusable="true"
-        android:src="@drawable/icono_buscar"
-        app:backgroundTint="@color/AzulOscuro" />
+<!--    <android.support.design.widget.FloatingActionButton-->
+<!--        android:id="@+id/consultador"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="bottom|end"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:layout_marginRight="10dp"-->
+<!--        android:layout_marginBottom="65dp"-->
+<!--        android:clickable="true"-->
+<!--        android:elevation="10dp"-->
+<!--        android:focusable="true"-->
+<!--        android:src="@drawable/icono_buscar"-->
+<!--        app:backgroundTint="@color/AzulOscuro" />-->
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/lista_pacientes"
