--- a/app/src/main/res/layout/dialogo_bitacora.xml
+++ b/app/src/main/res/layout/dialogo_bitacora.xml
@@ -8,21 +8,27 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <LinearLayout
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="vertical">-->
+
+    <!--        <TextView-->
+    <!--            android:id="@+id/tituloGeneral"-->
+    <!--            android:layout_width="match_parent"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:layout_marginTop="70dp"-->
+    <!--            android:paddingLeft="10dp"-->
+    <!--            android:text="General"-->
+    <!--            android:textColor="@color/Blanco"-->
+    <!--            android:textSize="24sp" />-->
+
+    <!--    </LinearLayout>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/bitacora"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/tituloGeneral"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:paddingLeft="10dp"
-            android:text="General"
-            android:textColor="@color/Blanco"
-            android:textSize="24sp" />
-
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:layout_marginTop="65dp"
+        android:scrollbars="vertical" />
 
 </FrameLayout>
