--- a/app/src/main/res/layout/dialogo_bitacora.xml
+++ b/app/src/main/res/layout/dialogo_bitacora.xml
@@ -25,7 +25,7 @@
 
     <!--    </LinearLayout>-->
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/bitacora"
+        android:id="@+id/listaBitacora"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="65dp"
