--- a/app/src/main/res/layout/item_bitacora.xml
+++ b/app/src/main/res/layout/item_bitacora.xml
@@ -43,7 +43,7 @@
                     android:weightSum="2">
 
                     <TextView
-                        android:id="@+id/hora_accion"
+                        android:id="@+id/fecha_accion"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.8"
@@ -71,7 +71,7 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/separadorPieza"
+            android:id="@+id/separadorBitacora"
             android:layout_width="wrap_content"
             android:layout_height="4dp"
             android:background="@color/FondoSecundario" />
