--- a/app/src/main/res/layout/item_servicio.xml
+++ b/app/src/main/res/layout/item_servicio.xml
@@ -30,7 +30,9 @@
                     android:layout_height="wrap_content"
                     android:gravity="left"
                     android:paddingLeft="10dp"
+                    android:paddingBottom="2dp"
                     android:text="1 - Consulta General"
+                    android:background="@color/AzulOscuro"
                     android:textColor="@color/Blanco"
                     android:textSize="20sp"
                     android:breakStrategy="simple"
@@ -76,7 +78,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:background="@color/FondoSecundario2"
-                android:src="@drawable/ic_opciones"
+                android:src="@drawable/ic_adelante"
                 android:text="Limpiar"
                 android:textColor="@color/Blanco" />
 
