--- a/app/src/main/res/layout/item_cuentas.xml
+++ b/app/src/main/res/layout/item_cuentas.xml
@@ -32,6 +32,8 @@
                     android:gravity="left"
                     android:paddingLeft="10dp"
                     android:text="admin"
+                    android:background="@color/AzulOscuro"
+                    android:paddingBottom="2dp"
                     android:textColor="@color/Blanco"
                     android:textSize="22sp" />
             </LinearLayout>
@@ -42,7 +44,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:background="@color/FondoSecundario2"
-                android:src="@drawable/ic_opciones"
+                android:src="@drawable/ic_adelante"
                 android:text="Limpiar"
                 android:textColor="@color/Blanco" />
 
