--- a/app/src/main/res/layout/item_pieza.xml
+++ b/app/src/main/res/layout/item_pieza.xml
@@ -31,6 +31,8 @@
                     android:breakStrategy="simple"
                     android:gravity="left"
                     android:paddingLeft="10dp"
+                    android:background="@color/AzulOscuro"
+                    android:paddingBottom="2dp"
                     android:text="1 - Diente de Leche"
                     android:textColor="@color/Blanco"
                     android:textSize="20sp" />
@@ -75,7 +77,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="10"
                 android:background="@color/FondoSecundario2"
-                android:src="@drawable/ic_opciones"
+                android:src="@drawable/ic_adelante"
                 android:text="Limpiar"
                 android:textColor="@color/Blanco" />
 
