--- a/app/src/main/res/layout/fragment_ing_detalle.xml
+++ b/app/src/main/res/layout/fragment_ing_detalle.xml
@@ -5,9 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".OpcionIngreso.Normal.IngDetalle"
-    android:background="@color/FondoTerciario">
+    android:background="@color/FondoSecundario">
 
-    <!-- TODO: Update blank fragment layout -->
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
@@ -27,56 +26,103 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <Space
+            <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="70dp" />
+                android:layout_height="match_parent"
+                android:layout_marginTop="70dp">
 
-            <Button
-                android:id="@+id/obFecha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/boton"
-                android:text="Fecha"
-                android:textSize="24sp" />
+                <android.support.design.widget.TextInputEditText
+                    android:id="@+id/paciente"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Motivo"
+                    android:inputType="text" />
+            </android.support.design.widget.TextInputLayout>
 
-            <Space
-                android:layout_width="match_parent"
-                android:layout_height="10dp" />
+<!--            <Space-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="70dp" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/obFecha"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@drawable/boton"-->
+<!--                android:text="Fecha"-->
+<!--                android:textSize="24sp" />-->
+
+<!--            <Space-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="10dp" />-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:orientation="horizontal">-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/titulo_fecha"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:gravity="right"-->
+<!--                    android:text="Fecha:   "-->
+<!--                    android:textSize="20sp" />-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/fecha"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_weight="1"-->
+<!--                    android:text="00/00/0000"-->
+<!--                    android:textSize="20sp" />-->
+<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
 
-                <TextView
-                    android:id="@+id/titulo_fecha"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="Fecha:   "
-                    android:textSize="20sp" />
+                <ImageButton
+                    android:id="@+id/obFecha"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="1.5"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/icono_citas" />
 
-                <TextView
-                    android:id="@+id/fecha"
-                    android:layout_width="wrap_content"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/fechaLayout"
+                    android:layout_width="402dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="00/00/0000"
-                    android:textSize="20sp" />
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="0.5">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/fecha"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:editable="false"
+                        android:hint="Fecha"
+                        tools:ignore="Deprecated" />
+                </android.support.design.widget.TextInputLayout>
             </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/motivo"
@@ -109,9 +155,7 @@
                     android:hint="Referente"
                     android:inputType="textPersonName" />
             </android.support.design.widget.TextInputLayout>
-
         </LinearLayout>
     </ScrollView>
-
 
 </FrameLayout>
