Fichas - Ajustes en View 1

--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".OpcionIngreso.Normal.IngDetalle"
+    tools:context=".Rutas.Fichas.Ficha"
     android:background="@color/FondoSecundario">
 
     <include
