--- a/app/src/main/res/layout/fragment_agregar.xml
+++ b/app/src/main/res/layout/fragment_agregar.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/FondoSecundario"
-    tools:context=".OpcionIngreso.Agregar">
+    tools:context=".Rutas.Fichas.MenuFichas">
 
 <!--    <include-->
 <!--        android:id="@+id/toolbar"-->
