--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -35,16 +35,22 @@
             android:orientation="vertical">
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/layoutPaciente"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="70dp">
+                android:layout_marginTop="70dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="150"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/paciente"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Motivo"
-                    android:inputType="text" />
+                    android:hint="Paciente"
+                    android:inputType="text"
+                    android:maxLength="150"
+                    android:maxLines="1"/>
             </android.support.design.widget.TextInputLayout>
 
 <!--            <Space-->
@@ -97,17 +103,16 @@
                     android:id="@+id/obFecha"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
-                    android:layout_weight="1.5"
+                    android:layout_weight="1.7"
                     android:background="@color/AzulOscuro"
                     android:src="@drawable/icono_citas" />
 
                 <android.support.design.widget.TextInputLayout
                     android:id="@+id/fechaLayout"
-                    android:layout_width="402dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
-                    android:layout_weight="0.5">
+                    android:layout_weight="0.3">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/fecha"
@@ -120,40 +125,58 @@
             </LinearLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/layoutMotivo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+                app:counterEnabled="true"
+                app:counterMaxLength="50"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/motivo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Motivo"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:maxLength="50"
+                    android:maxLines="1"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/layoutMedico"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="70"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/medico"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Medico"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:maxLength="70"
+                    android:maxLines="1"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/layoutReferente"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="70"
+                app:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/referente"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Referente"
-                    android:inputType="textPersonName" />
+                    android:inputType="textPersonName"
+                    android:maxLength="70"
+                    android:maxLines="1"/>
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </ScrollView>
