Fichas - Ajustes en View 3

--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -48,6 +48,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Paciente"
+                    android:enabled="false"
                     android:inputType="text"
                     android:maxLength="150"
                     android:maxLines="1"/>
