--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -34,11 +34,22 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/text_view1"
+                android:text="Seleccione paciente"
+                android:layout_marginTop="70dp"
+                android:padding="12dp"
+                android:gravity="center"
+                android:drawableRight="@drawable/ic_down"
+                android:background="@color/AzulOscuro"
+                android:textColor="@color/Blanco"/>
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/layoutPaciente"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="70dp"
                 app:counterEnabled="true"
                 app:counterMaxLength="150"
                 app:errorEnabled="true">
@@ -53,45 +64,6 @@
                     android:maxLength="150"
                     android:maxLines="1"/>
             </android.support.design.widget.TextInputLayout>
-
-<!--            <Space-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="70dp" />-->
-
-<!--            <Button-->
-<!--                android:id="@+id/obFecha"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@drawable/boton"-->
-<!--                android:text="Fecha"-->
-<!--                android:textSize="24sp" />-->
-
-<!--            <Space-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="10dp" />-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/titulo_fecha"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:gravity="right"-->
-<!--                    android:text="Fecha:   "-->
-<!--                    android:textSize="20sp" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/fecha"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:text="00/00/0000"-->
-<!--                    android:textSize="20sp" />-->
-<!--            </LinearLayout>-->
 
             <LinearLayout
                 android:layout_width="match_parent"
