--- a/app/src/main/res/layout/dialogo_busqueda.xml
+++ b/app/src/main/res/layout/dialogo_busqueda.xml
@@ -7,6 +7,7 @@
     android:background="@color/AzulOscuro">
 
     <TextView
+        android:id="@+id/tituloDialogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Seleccione un paciente"
