--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -35,11 +35,21 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/tituloPaciente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
+                android:text="Paciente"
+                android:textSize="14dp"
+                android:textColor="@color/Blanco"
+                />
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/paciente"
                 android:text="Seleccione paciente"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="2dp"
                 android:padding="12dp"
                 android:gravity="center"
                 android:drawableRight="@drawable/ic_down"
