--- a/app/src/main/res/layout/fragment_ficha.xml
+++ b/app/src/main/res/layout/fragment_ficha.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Rutas.Fichas.FichaForm.Ficha"
-    android:background="@color/FondoSecundario">
+    android:background="@color/FondoSecundario"
+    tools:context=".Rutas.Fichas.FichaForm.Ficha">
 
     <include
         android:id="@+id/toolbar"
@@ -40,40 +40,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="70dp"
                 android:text="Paciente"
-                android:textSize="14dp"
                 android:textColor="@color/Blanco"
-                />
+                android:textSize="14dp" />
 
             <TextView
+                android:id="@+id/paciente"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/paciente"
-                android:text="Seleccione paciente"
                 android:layout_marginTop="2dp"
-                android:padding="12dp"
-                android:gravity="center"
-                android:drawableRight="@drawable/ic_down"
                 android:background="@color/AzulOscuro"
-                android:textColor="@color/Blanco"/>
-
-<!--            <android.support.design.widget.TextInputLayout-->
-<!--                android:id="@+id/layoutPaciente"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                app:counterEnabled="true"-->
-<!--                app:counterMaxLength="150"-->
-<!--                app:errorEnabled="true">-->
-
-<!--                <android.support.design.widget.TextInputEditText-->
-<!--                    android:id="@+id/paciente"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:hint="Paciente"-->
-<!--                    android:enabled="false"-->
-<!--                    android:inputType="text"-->
-<!--                    android:maxLength="150"-->
-<!--                    android:maxLines="1"/>-->
-<!--            </android.support.design.widget.TextInputLayout>-->
+                android:drawableRight="@drawable/ic_down"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="Seleccione paciente"
+                android:textColor="@color/Blanco" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,7 +103,7 @@
                     android:hint="Motivo"
                     android:inputType="text"
                     android:maxLength="50"
-                    android:maxLines="1"/>
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -141,7 +121,7 @@
                     android:hint="Medico"
                     android:inputType="textPersonName"
                     android:maxLength="70"
-                    android:maxLines="1"/>
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -159,7 +139,7 @@
                     android:hint="Referente"
                     android:inputType="textPersonName"
                     android:maxLength="70"
-                    android:maxLines="1"/>
+                    android:maxLines="1" />
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
     </ScrollView>
