--- a/app/src/main/res/layout/fragment_historialmed.xml
+++ b/app/src/main/res/layout/fragment_historialmed.xml
@@ -32,22 +32,22 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="65dp"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/titulo_detalle_hm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="70dp"
-                android:background="@color/AzulOscuro"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="Detalle:"
-                android:textSize="18sp" />
+<!--            <TextView-->
+<!--                android:id="@+id/titulo_detalle_hm"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="70dp"-->
+<!--                android:background="@color/AzulOscuro"-->
+<!--                android:gravity="center_horizontal|center_vertical"-->
+<!--                android:text="Detalle:"-->
+<!--                android:textSize="18sp" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
