--- a/app/src/main/res/layout/fragment_historial_odon.xml
+++ b/app/src/main/res/layout/fragment_historial_odon.xml
@@ -38,7 +38,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="70dp"
-                android:orientation="vertical">
+                android:weightSum="1"
+                android:orientation="horizontal">
 
                 <!--                <TextView-->
                 <!--                    android:id="@+id/titulo_detalle"-->
@@ -53,17 +54,38 @@
                     android:id="@+id/dolor"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_weight="0.7"
                     android:text="Dolor" />
 
                 <EditText
                     android:id="@+id/desc_dolor"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_weight="0.3"
                     android:ems="10"
+                    android:maxLength="60"
                     android:hint="¿Porque?"
                     android:inputType="textPersonName" />
+
+                <!--                <android.support.design.widget.TextInputLayout-->
+                <!--                    android:id="@+id/dolorLayout"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="match_parent"-->
+                <!--                    android:layout_marginTop="10dp"-->
+                <!--                    app:counterEnabled="true"-->
+                <!--                    app:counterMaxLength="60"-->
+                <!--                    app:errorEnabled="true">-->
+
+                <!--                    <android.support.design.widget.TextInputEditText-->
+                <!--                        android:id="@+id/desc_dolor"-->
+                <!--                        android:layout_width="match_parent"-->
+                <!--                        android:layout_height="wrap_content"-->
+                <!--                        android:hint="Descripcion"-->
+                <!--                        android:inputType="text"-->
+                <!--                        android:maxLength="60"-->
+                <!--                        android:maxLines="1" />-->
+                <!--                </android.support.design.widget.TextInputLayout>-->
+
             </LinearLayout>
 
             <LinearLayout
@@ -78,15 +100,33 @@
                     android:layout_height="wrap_content"
                     android:text="Gingivitis" />
 
-                <EditText
-                    android:id="@+id/otros_ho"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="Otros:"
-                    android:inputType="textPersonName" />
-            </LinearLayout>
+                <!--                <EditText-->
+                <!--                    android:id="@+id/otros_ho"-->
+                <!--                    android:layout_width="match_parent"-->
+                <!--                    android:layout_height="wrap_content"-->
+                <!--                    android:ems="10"-->
+                <!--                    android:hint="Otros:"-->
+                <!--                    android:inputType="textPersonName" />-->
 
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/otrosLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    app:counterEnabled="true"
+                    app:counterMaxLength="60"
+                    app:errorEnabled="true">
+
+                    <android.support.design.widget.TextInputEditText
+                        android:id="@+id/otros_ho"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Otros"
+                        android:inputType="text"
+                        android:maxLength="60"
+                        android:maxLines="1" />
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
