--- a/app/src/main/res/layout/fragment_seg_pagos.xml
+++ b/app/src/main/res/layout/fragment_seg_pagos.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".OpcionIngreso.Normal.IngHOdon"
+    tools:context=".Rutas.Fichas.HistorialOdonto.HistorialOdonDos"
     android:background="@color/FondoTerciario">
 
     <include
